--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "start": "node server/juomaServer.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "clean": "rmdir /s /q node_modules"
   },
   "eslintConfig": {
     "extends": [
