--- a/package.json
+++ b/package.json
@@ -4,11 +4,8 @@
   "private": true,
   "dependencies": {
     "express": "^4.18.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "sqlite3": "^5.1.6",
-    "web-vitals": "^2.1.4"
+    "sqlite3": "^5.1.6"
   },
   "scripts": {
     "start": "node server/juomaServer.js",
