--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "react-scripts": "5.0.1",
     "sqlite3": "^5.1.6"
