--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "react-scripts": "5.0.1",
+    "react-dom": "^18.2.0",
     "sqlite3": "^5.1.6"
   },
   "scripts": {
