--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "express": "^4.18.2",
     "react-scripts": "5.0.1",
     "react-dom": "^18.2.0",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.6",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "node server/juomaServer.js",
